# easysim

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
configs/: default_bullet.yaml  default_isaac_gym.yaml  default_isaac_sim.yaml
src/easysim/: __init__.py  attrs.py  body.py  camera.py  cmd.py  config.py  constants.py  contact.py  scene.py  simulator_env.py
src/easysim/config/: bullet.py  config.py  isaac_gym.py  isaac_sim.py
src/easysim/simulators/: bullet.py  isaac_gym.py  isaac_sim.py  registration.py  simulator.py
tests/: __init__.py  easysim_version_test.py
