# Copyright (c) 2021, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# Licensed under the MIT License [see LICENSE for details].

# Additional files that need to be included in the package distribution must be
# listed in the MANIFEST.in file.
#
# References:
# * https://newbedev.com/how-include-static-files-to-setuptools-python-package

[metadata]

# Configure specific project settings
name = easysim
author = Yu-Wei Chao
description = A library for creating Gym environments with unified API to various physics simulators
url = https://gitlab-master.nvidia.com/ychao/easysim
license = MIT

# Configure general project settings
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

# List of classifiers can be found here:
# https://pypi.org/classifiers/
classifiers =
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Robotics

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
install_requires =
    gym==0.21.0
    numpy==1.22.2
    pybullet==3.2.1
    setuptools_scm==6.4.2
    torch==1.10.2
    yacs==0.1.8
packages = find_namespace:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    anybadge==1.8.0
    black==21.12b0
    build==0.7.0
    graphviz==0.19.1
    flake8==4.0.1
    flake8-copyright==0.2.2
    flake8-docstrings==1.6.0
    flake8-isort==4.1.1
    mypy==0.931
    pytest==6.2.5
    pytest-cov==3.0.0
    sphinx==4.3.0
    sphinx_rtd_theme==1.0.0
    twine==3.7.1

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = package.module:function

# NOTE (roflaherty): Flake8 doesn't support pyproject.toml configuration yet.
[flake8]
select = E,F,W,C,D,I
copyright-check = True
copyright-regexp = # Copyright \(c\) 20\d{2}(?:-20\d{2])?, NVIDIA CORPORATION & AFFILIATES. All rights reserved.\n#\n# Licensed under the MIT License \[see LICENSE for details\].\n
max-line-length = 100
docstring-convention = google
exclude = build,venv
ignore =
    E731 # (ignore recommendation to not use lambdas because there is no other way to write a single line function with out warnings)
